--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -21,5 +21,5 @@ jobs:
         - name: Build
             env:
                 CC: ${{ matrix.compiler }}
-            run:  --your-args-here
+            run: make
 
