--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -3,9 +3,6 @@ name: Build master
 on: 
     push:
         branches: ['master']
-strategy:
-  matrix:
-    compiler: [gcc, clang]
 jobs:
     deps:
         runs-op: ubuntu-latest
@@ -20,6 +17,6 @@ jobs:
         - uses: actions/checkout@v1
         - name: Build
           env:
-            CC: ${{ matrix.compiler }}
+            CC: [gcc, clang]
           run: make
 
