--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,7 +5,7 @@ on:
         branches: ['master']
 jobs:
     deps:
-        runs-op: ubuntu-latest
+        runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v1
         - name: install deps
