--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -17,6 +17,6 @@ jobs:
         - uses: actions/checkout@v1
         - name: Build
           env:
-            CC: [gcc, clang]
+            CC: clang
           run: make
 
