--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,7 +10,12 @@ jobs:
         - uses: actions/checkout@v1
         - name: install deps
           run: |
-              sudo apt install raylib
+              git clone https://github.com/raysan5/raylib.git raylib
+              cd raylib
+              mkdir build && cd build
+              cmake -DBUILD_SHARED_LIBS=ON ..
+              make
+              make install
     build:
         runs-on: ubuntu-latest
         steps:
