--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,6 +10,7 @@ jobs:
         - uses: actions/checkout@v1
         - name: install deps
           run: |
+              sudo apt install libasound2-dev mesa-common-dev libx11-dev libxrandr-dev libxi-dev xorg-dev libgl1-mesa-dev libglu1-mesa-dev
               git clone https://github.com/raysan5/raylib.git raylib
               cd raylib
               mkdir build && cd build
@@ -17,6 +18,7 @@ jobs:
               make
               make install
     build:
+        needs: deps
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v1
