--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -16,7 +16,7 @@ jobs:
               mkdir build && cd build
               cmake -DBUILD_SHARED_LIBS=ON ..
               make
-              make install
+              sudo make install
     build:
         needs: deps
         runs-on: ubuntu-latest
