Fixing gh actions

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,7 +12,7 @@ jobs:
         - name: Build
           env:
             CC: clang
-          run: |
+        - run: |
               sudo apt install libasound2-dev mesa-common-dev libx11-dev libxrandr-dev libxi-dev xorg-dev libgl1-mesa-dev libglu1-mesa-dev
               git clone https://github.com/raysan5/raylib.git raylib
               cd raylib
@@ -20,5 +20,5 @@ jobs:
               cmake -DBUILD_SHARED_LIBS=ON ..
               make
               sudo make install
-          run: make
+        - run: make
 
