--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: configure
       run: |
-        sudo apt install libasound2-dev mesa-common-dev libx11-dev libxrandr-dev libxi-dev xorg-dev libgl1-mesa-dev libglu1-mesa-dev
+        sudo apt install libasound2-dev mesa-common-dev libx11-dev libxrandr-dev libxi-dev xorg-dev libgl1-mesa-dev libglu1-mesa-dev 
+        sudo apt install libglfw3-dev libopenal-dev
         git clone https://github.com/raysan5/raylib.git raylib
         cd raylib
         mkdir build && cd build
